k8s/manifests/groundctl-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groundctl-site
  namespace: groundctl-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: groundctl-site
  template:
    metadata:
      labels:
        app: groundctl-site
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: groundctl-site
          image: ghcr.io/abelmeijberg/groundctl-site:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
