k8s/manifests/groundctl-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groundctl-site
  namespace: groundctl-site
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - secretName: groundctl-site-tls
      hosts:
        - groundctl.dev
        - www.groundctl.dev
  rules:
    - host: groundctl.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: groundctl-site
                port:
                  number: 80
    - host: www.groundctl.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: groundctl-site
                port:
                  number: 80
